firmware/build/log/idf_py_stderr_output_11431
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/control/command_executor/test_pulse_cmd.cpp: In function 'esp_err_t handle_move_test(const ParsedCommand*, char*, size_t)':
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/control/command_executor/test_pulse_cmd.cpp:503:15: error: 'get_axis_index' was not declared in this scope; did you mean 'get_rmt_axis_index'?
  503 |     int idx = get_axis_index(axis);
      |               ^~~~~~~~~~~~~~
      |               get_rmt_axis_index
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/control/command_executor/test_pulse_cmd.cpp: At global scope:
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/control/command_executor/test_pulse_cmd.cpp:180:13: warning: 'void cleanup_mcpwm_axis(int)' defined but not used [-Wunused-function]
  180 | static void cleanup_mcpwm_axis(int idx)
      |             ^~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/control/CMakeFiles/__idf_control.dir/command_executor/test_pulse_cmd.cpp.obj] Error 1
make[1]: *** [esp-idf/control/CMakeFiles/__idf_control.dir/all] Error 2
make: *** [all] Error 2
